Fixed white space issue below nav bar on Contact screen.

--- a/react/src/css/index.css
+++ b/react/src/css/index.css
@@ -10,7 +10,7 @@
   display: none; }
 
 .header-bar {
-  background-color: #FFFFFF;
+  background-color: white;
   overflow: auto;
   padding: 0.5em 1em; }
   .header-bar button {
@@ -22,8 +22,8 @@
   clear: both; }
 
 .menu-btn {
-  background-color: #FFFFFF;
-  border: #FFFFFF;
+  background-color: white;
+  border: white;
   font-weight: 300;
   font-size: 0.7em;
   padding: 3%;
@@ -35,7 +35,7 @@
 
 .menu {
   display: none;
-  background-color: #FFFFFF;
+  background-color: white;
   font-weight: 700;
   font-size: 0.6em;
   float: right;
@@ -51,8 +51,8 @@
 
 .scroll-up {
   padding: 0.2em 0.6em;
-  color: #FFFFFF;
-  background-color: #000000;
+  color: white;
+  background-color: black;
   border: none;
   border-radius: 36px;
   font-size: 1em;
@@ -73,7 +73,7 @@
 .transparent-layer {
   width: 100%;
   height: 100%;
-  background-color: #000000;
+  background-color: black;
   opacity: .5; }
 
 .banner-content {
@@ -87,7 +87,7 @@
   font-family: "Open Sans", sans-serif;
   font-weight: 800;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: white;
   font-size: 1.3em; }
 
 .banner-text {
@@ -96,11 +96,11 @@
   text-transform: uppercase; }
 
 .scroll-down {
-  background-color: #000000;
+  background-color: black;
   border: none;
   padding: 1em 4em;
   margin-top: 0.9em;
-  color: #FFFFFF;
+  color: white;
   text-transform: uppercase;
   font-size: 0.7em; }
 
@@ -112,8 +112,8 @@
   font-size: 1.5em; }
 
 .title-hr {
-  color: #000000;
-  background-color: #000000;
+  color: black;
+  background-color: black;
   border: 0;
   width: 90%;
   height: 2px;
@@ -142,7 +142,7 @@
 .project-img {
   height: 250px;
   width: 250px;
-  background-color: #000000;
+  background-color: black;
   background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/1400/5a0ecf51928569.58fef7802efd7.jpg");
   background-size: cover;
   background-position: center; }
@@ -158,7 +158,7 @@
   margin: 0 auto; }
 
 #sectContact {
-  margin-top: 18%; }
+  margin-top: 5em; }
   #sectContact .contact-wrapper {
     width: 80vw;
     height: 50vh;
@@ -191,7 +191,7 @@
             #sectContact .contact-wrapper .contact-details .contact-icons ul li i {
               font-size: 1.5em;
               margin-right: 0.6em;
-              color: #FF0000; }
+              color: red; }
             #sectContact .contact-wrapper .contact-details .contact-icons ul li .fa-facebook {
               margin-left: 0; }
   #sectContact .contact-map {
@@ -218,7 +218,7 @@
       margin-top: 13%;
       width: 300px;
       height: 400px;
-      background-color: #FF0000; }
+      background-color: red; }
 
 @media only screen and (min-width: 600px) {
   .header-bar {
@@ -295,11 +295,11 @@
     padding: 0 10em;
     margin-bottom: 7em;
     max-width: none;
-    background-color: #000000;
-    color: #FFFFFF; }
+    background-color: black;
+    color: white; }
     .our-goal .title-hr {
-      color: #FFFFFF;
-      background-color: #FFFFFF; }
+      color: white;
+      background-color: white; }
 
   .latest-projects {
     margin-bottom: 2em; }
@@ -309,13 +309,13 @@
       width: 100px; }
 
   #sectContact {
-    background-color: #000000; }
+    background-color: black; }
     #sectContact .contact-wrapper {
-      color: #FFFFFF; }
+      color: white; }
     #sectContact hr {
-      background-color: #FFFFFF !important; }
+      background-color: white !important; }
     #sectContact i {
-      color: #FFFFFF !important; }
+      color: white !important; }
 
   #secStatistics {
     width: 75vw; }
@@ -334,5 +334,3 @@
 
 .splitv-third {
   height: 33%; }
-
-/*# sourceMappingURL=index.css.map */
