--- a/react/src/sass/master.scss
+++ b/react/src/sass/master.scss
@@ -183,7 +183,7 @@
 //CONTACTS ---------------------------------------------------------------------
 
 #sectContact {
-	margin-top: 18%;
+	margin-top: 5em;
 	.contact-wrapper {
 		width: 80vw;
 		height: 50vh;
